[package]
name = "wasm_runtime"
version = "0.11.1"
edition = "2021"
authors = ["VMware's Wasm Labs"]
description = "Wrapper for offering a simple C-API to manage WebAssembly modules via Wasmtime"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
readme = "README.md"
documentation = "https://docs.rs/wasi"


[lib]
crate-type = ["cdylib"]      # Creates dynamic lib
#crate-type = ["staticlib"] # Creates static lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "8.0.1"
wasmtime-wasi = "8.0.1"
wasi-common = "8.0.1"
wasi-cap-std-sync = "8.0.1"
anyhow = "1.0.71"
once_cell = "1.17.1"
rand = "0.8.5"

