[package]
name = "wasm_runtime"
version = "0.11.3"
edition = "2021"
authors = ["VMware's Wasm Labs"]
description = "Wrapper for offering a simple C-API to manage WebAssembly modules via Wasmtime"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
readme = "README.md"
documentation = "https://docs.rs/wasi"


[lib]
crate-type = ["cdylib", "rlib"]     # Creates dynamic lib for C ABI (added `rlib` so integration tests can import the `wasm_runtime` crate)
doctest = false                     # Avoid to run doctest since examples are for C code

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "7.0.1"
wasmtime-wasi = "7.0.1"
wasi-common = "7.0.1"
wasi-cap-std-sync = "7.0.1"
anyhow = "1.0.71"
once_cell = "1.17.1"
rand = "0.8.5"
path-clean = "1.0.1"

